--- a/content/resources/2_28_05.md
+++ b/content/resources/2_28_05.md
@@ -4,6 +4,7 @@ description: This resource introduces thermodynamic control. It also contains re
   on stereochemical principals.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/c352ca1a8ad903abae37d31d6979aff7_2_28_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 2_28_05.pdf
 uid: c352ca1a-8ad9-03ab-ae37-d31d6979aff7
