--- a/content/resources/3_02_05.md
+++ b/content/resources/3_02_05.md
@@ -4,6 +4,7 @@ description: 'This resource presents outline to lecture: Strategies for Stereoco
   Synthesis II.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/a9d1be1aa631043285a80777b6ec848e_3_02_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 3_02_05.pdf
 uid: a9d1be1a-a631-0432-85a8-0777b6ec848e
