--- a/content/resources/3_04_05.md
+++ b/content/resources/3_04_05.md
@@ -6,6 +6,7 @@ description: 'This resource presents the outline to the following topics:  Therm
   to Kinetic Resolution'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/af29a6639febe8b4ba4955fcded4ca8a_3_04_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 3_04_05.pdf
 uid: af29a663-9feb-e8b4-ba49-55fcded4ca8a
