--- a/content/resources/3_07_05.md
+++ b/content/resources/3_07_05.md
@@ -4,6 +4,7 @@ description: 'This resource covers the following topics: Reagent Control Strateg
   and Double Asymmetric Synthesis, Comparison of Substrate and Reagent Control Strategies'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/783c7340f9882e88f2c48f1e43dac7ff_3_07_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 3_07_05.pdf
 uid: 783c7340-f988-2e88-f2c4-8f1e43dac7ff
