--- a/content/resources/3_11_05.md
+++ b/content/resources/3_11_05.md
@@ -5,6 +5,7 @@ description: 'This resource presents the outline to the topics: Case Study #2 - 
   from Sugars.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/b38dc1d846caba78924988cdc7bccfcd_3_11_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 3_11_05.pdf
 uid: b38dc1d8-46ca-ba78-9249-88cdc7bccfcd
