--- a/content/resources/3_16_05.md
+++ b/content/resources/3_16_05.md
@@ -4,6 +4,7 @@ description: This lecture outlines the stereocontrolled alkylation and related e
   substitution strategies. It also lists some background topics for review.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/c537f620db1879f08053d8e9b355a46f_3_16_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 3_16_05.pdf
 uid: c537f620-db18-79f0-8053-d8e9b355a46f
