--- a/content/resources/3_18_05.md
+++ b/content/resources/3_18_05.md
@@ -4,6 +4,7 @@ description: This resource introduces stereocontrolled alkylation and related el
   substitution strategies.It also covers key retrons.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/91b83bc60e8a2d14cc5205b101ab4914_3_18_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 3_18_05.pdf
 uid: 91b83bc6-0e8a-2d14-cc52-05b101ab4914
