--- a/content/resources/3_28_05.md
+++ b/content/resources/3_28_05.md
@@ -4,6 +4,7 @@ description: This resource covers stereocontrolled alkylation and related electr
   substitution strategies.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/56a8661a2141445978df788e7ffcd572_3_28_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 3_28_05.pdf
 uid: 56a8661a-2141-4459-78df-788e7ffcd572
