--- a/content/resources/3_30_05.md
+++ b/content/resources/3_30_05.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/4a6a6e0d0ba525230d1e3f69ac9f7239_3_30_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 3_30_05.pdf
 uid: 4a6a6e0d-0ba5-2523-0d1e-3f69ac9f7239
