--- a/content/resources/4_11_05.md
+++ b/content/resources/4_11_05.md
@@ -7,6 +7,7 @@ description: 'This resource covers the outline to the following topics: Addition
   Asymmetric Addition of Alkynylzinc Compounds to Aldehydes.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/1f9adb8f94172d22476c8568db08ac5b_4_11_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 4_11_05.pdf
 uid: 1f9adb8f-9417-2d22-476c-8568db08ac5b
