--- a/content/resources/4_13_05.md
+++ b/content/resources/4_13_05.md
@@ -8,6 +8,7 @@ description: 'This resource introduces the following topics: Introduction: Mecha
   (Intrinsic Diastereoselection), Crotymetal Additions to a-Chiral Aldehydes.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/aabaf6655f6e7cfc8d4acdf3d6c5e471_4_13_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 4_13_05.pdf
 uid: aabaf665-5f6e-7cfc-8d4a-cdf3d6c5e471
