--- a/content/resources/4_15_05.md
+++ b/content/resources/4_15_05.md
@@ -5,6 +5,7 @@ description: 'This resource introduces the following topics: Allylboron Compound
   Showdown.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/d8aaffeb860efd599e769bbfaf3883f2_4_15_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 4_15_05.pdf
 uid: d8aaffeb-860e-fd59-9e76-9bbfaf3883f2
