--- a/content/resources/4_1_05.md
+++ b/content/resources/4_1_05.md
@@ -8,6 +8,7 @@ description: 'This lecture file outlines Intrinisic Stereochemistry in the Micha
   (Michael Additions)'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/b3f6b06cf11ca2b5db8cf21c5c865d1e_4_1_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 4_1_05.pdf
 uid: b3f6b06c-f11c-a2b5-db8c-f21c5c865d1e
