--- a/content/resources/4_20_05.md
+++ b/content/resources/4_20_05.md
@@ -5,6 +5,7 @@ description: 'This resource covers the following topics: Crotylation with Leight
   to Aldehydes.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/913a2c95dfdea6aa9a9cacbc74ecd2d4_4_20_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 4_20_05.pdf
 uid: 913a2c95-dfde-a6aa-9a9c-acbc74ecd2d4
