--- a/content/resources/4_22_05.md
+++ b/content/resources/4_22_05.md
@@ -6,6 +6,7 @@ description: 'This resource introduces the following topics: Overview of the Ste
   Catalyzed Aldol Reactions.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/c603b7e4a06cb6bbbfb9bc9021c034fe_4_22_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 4_22_05.pdf
 uid: c603b7e4-a06c-b6bb-bfb9-bc9021c034fe
