--- a/content/resources/4_27_05.md
+++ b/content/resources/4_27_05.md
@@ -5,6 +5,7 @@ description: 'This resource covers the following topics: 1,2-Asymmetric Inductio
   Analysis.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/9bf0769b180bce0b315171410e012e90_4_27_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 4_27_05.pdf
 uid: 9bf0769b-180b-ce0b-3151-71410e012e90
