--- a/content/resources/4_29_05.md
+++ b/content/resources/4_29_05.md
@@ -4,6 +4,7 @@ description: 'This covers the following topics: Substrate Control - Directed Hyd
   and Reagent Control Strategies.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/cd4f57c3f358e1e4fec969e6e6745d5c_4_29_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 4_29_05.pdf
 uid: cd4f57c3-f358-e1e4-fec9-69e6e6745d5c
