--- a/content/resources/4_4_05.md
+++ b/content/resources/4_4_05.md
@@ -8,6 +8,7 @@ description: 'This resource presents the outline to the following topics: Intrin
   Addition III: Stabilized Nucleophiles (Michael Additions).'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/8d7858e819c5bb0f290c5f729b3d287f_4_4_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 4_4_05.pdf
 uid: 8d7858e8-19c5-bb0f-290c-5f729b3d287f
