--- a/content/resources/4_6_05.md
+++ b/content/resources/4_6_05.md
@@ -6,6 +6,7 @@ description: 'This resource covers the following topics: Substrate Control: 1,2-
   Shi AE'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/3d6f88b15f13309ba1e6c2974a21a031_4_6_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 4_6_05.pdf
 uid: 3d6f88b1-5f13-309b-a1e6-c2974a21a031
