--- a/content/resources/4_8_05.md
+++ b/content/resources/4_8_05.md
@@ -6,6 +6,7 @@ description: 'This resource covers the following topics outline: Substrate Contr
   and Related Addition Reactions Alkyl, Alkenyl, and Alkynyl Metal Compounds.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/49052cca0df425004f3fbd692f01ff32_4_8_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 4_8_05.pdf
 uid: 49052cca-0df4-2500-4f3f-bd692f01ff32
