--- a/content/resources/5_2_05.md
+++ b/content/resources/5_2_05.md
@@ -7,6 +7,7 @@ description: 'This lecture contains the outlines for Substrate Control: 1,2-Asym
   Reagent Controlled Dihydroxylation.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/5bec32dd0e2543d6d5cb0a650a65c6f6_5_2_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 5_2_05.pdf
 uid: 5bec32dd-0e25-43d6-d5cb-0a650a65c6f6
