--- a/content/resources/5_4_05.md
+++ b/content/resources/5_4_05.md
@@ -6,6 +6,7 @@ description: 'This file contains the outline for the Substrate Control: 1,2-Asym
   Shi AE.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/378b48f5ac524c2db4dfe1ecaf7fb601_5_4_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 5_4_05.pdf
 uid: 378b48f5-ac52-4c2d-b4df-e1ecaf7fb601
