--- a/content/resources/5_6_05.md
+++ b/content/resources/5_6_05.md
@@ -7,6 +7,7 @@ description: 'This lecture contains the outlines for Substrate Control: 1,2-Asym
   of AE Products, Reagent Control: Jacobsen-Katsuki AE, and Reagent Control: Shi AE.'
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/5-512-synthetic-organic-chemistry-ii-spring-2005/aefd0c275816068a5889c17f51bfc614_5_6_05.pdf
 file_type: application/pdf
+parent_uid: a5607114-339b-d5b9-e943-f0e3e27e9f00
 resourcetype: Document
 title: 5_6_05.pdf
 uid: aefd0c27-5816-068a-5889-c17f51bfc614
